--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
     "next": "15.0.3",
+    "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
