--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "geist": "^1.3.1",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^18.3.1",
+    "react-dom": "18.3.1",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
